--- a/app/src/main/res/layout/activity_view_activety.xml
+++ b/app/src/main/res/layout/activity_view_activety.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewActivety">
+    android:background="#A1A9BA"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tvLabelInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:background="#ffffff"
+        android:text="@string/tv_mag"
+        android:textSize="25sp"
+        ></TextView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
