--- a/app/src/main/res/layout/activity_view_activety.xml
+++ b/app/src/main/res/layout/activity_view_activety.xml
@@ -14,7 +14,15 @@
         android:layout_marginTop="5dp"
         android:background="#ffffff"
         android:text="@string/tv_mag"
-        android:textSize="25sp"
-        ></TextView>
+        android:textSize="25sp" />
+
+    <EditText
+        android:id="@+id/etInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="5dp"
+        android:background="#ffffff"
+        android:inputType="text" />
 
 </LinearLayout>
