--- a/app/src/main/res/layout/activity_view_activety.xml
+++ b/app/src/main/res/layout/activity_view_activety.xml
@@ -25,4 +25,34 @@
         android:background="#ffffff"
         android:inputType="text" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#53629A"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/cbdrink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
+            android:background="#ffffff"
+            android:text="@string/cb_food" />
+
+        <CheckBox
+            android:id="@+id/cbFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
+            android:background="#ffffff"
+            android:text="@string/cb_food" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bt_save" />
+
 </LinearLayout>
