--- a/app/src/main/res/layout/activity_view_activety.xml
+++ b/app/src/main/res/layout/activity_view_activety.xml
@@ -63,8 +63,8 @@
             android:id="@+id/rbMale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="21dp"
             android:background="#ffffff"
             android:text="@string/rb_male" />
 
@@ -76,6 +76,15 @@
             android:text="@string/rb_female" />
 
     </RadioGroup>
+
+    <Spinner
+        android:id="@+id/spCurryList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:entries="@array/sp_currylist"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp" />
 
     <Button
         android:id="@+id/btSave"
