--- a/app/src/main/res/layout/activity_view_activety.xml
+++ b/app/src/main/res/layout/activity_view_activety.xml
@@ -82,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
-        android:entries="@array/sp_currylist"
+        android:entries="@array/sp_curryList"
         android:paddingBottom="5dp"
         android:paddingTop="5dp" />
 
@@ -91,5 +91,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bt_save" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#ffffff"
+        android:entries="@array/lv_cocktailList" />
 
 </LinearLayout>
